Add append function, icons

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Idea Box</title>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href="main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
@@ -22,7 +23,7 @@
           placeholder="Body" 
           class="body-input"
         >
-        <button class="save-button" disabled>save</button>
+        <button class="save-button">save</button>
       </form>
   </header>
   <main>
@@ -33,6 +34,7 @@
       class="search-input"
     >
   </main>
+  <section class="populated-ideas-container"></section>
   </body>
   <script src="script.js" type="text/javascript"></script>
 </html>
