--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Idea Box</title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href="main.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab:700" rel="stylesheet">
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
   </head>
   <body>
@@ -15,15 +15,15 @@
           type="text" 
           aria-label="Enter idea title"
           placeholder="Title" 
-          class="title-input"
+          class="title-input form-elements"
         >
         <input 
           type="text" 
           aria-label="Enter information about idea"
           placeholder="Body" 
-          class="body-input"
+          class="body-input form-elements"
         >
-        <button class="save-button">save</button>
+        <button class="save-button form-elements">save</button>
       </form>
   </header>
   <main>
@@ -31,7 +31,7 @@
       type="text" 
       aria-label="Search ideas"
       placeholder="Search" 
-      class="search-input"
+      class="search-input form-elements"
     >
   </main>
   <section class="populated-ideas-container"></section>
