Change quality funciton, delete button functionality

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           placeholder="Body" 
           class="body-input form-elements"
         >
-        <button class="save-button form-elements">save</button>
+        <button class="save-button form-elements" disabled>save</button>
       </form>
   </header>
   <main>
