Work on search functionality, make content editable, CSS

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </header>
   <main>
     <input 
-      type="text" 
+      type="search" 
       aria-label="Search ideas"
       placeholder="Search" 
       class="search-input form-elements"
