Add basic media queries for mobile

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
           placeholder="Title" 
           class="title-input form-elements"
         >
-        <input 
+        <textarea 
           type="text" 
           aria-label="Enter information about idea"
           placeholder="Body" 
           class="body-input form-elements"
-        >
+        ></textarea>
         <button class="save-button form-elements" disabled>save</button>
       </form>
   </header>
