--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
           aria-label="Enter information about idea"
           placeholder="Body" 
           class="body-input form-elements"
-        ></textarea>
+        >
+        </textarea>
         <button class="save-button form-elements" disabled>save</button>
       </form>
   </header>
