--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Idea Box</title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link href="main.css" rel="stylesheet">
+    <link href="main.css f" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab:700" rel="stylesheet">
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
   </head>
@@ -17,13 +17,12 @@
           placeholder="Title" 
           class="title-input form-elements"
         >
-        <textarea 
+        <textarea
           type="text" 
           aria-label="Enter information about idea"
-          placeholder="Body" 
+          placeholder="Body"
           class="body-input form-elements"
-        >
-        </textarea>
+        ></textarea>
         <button class="save-button form-elements" disabled>save</button>
       </form>
   </header>
