Refactor the refactor FTW

--- a/index.html
+++ b/index.html
@@ -8,34 +8,33 @@
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
   </head>
   <body>
-  <header>
-    <h1>idea<span>box</span></h1>
-      <form>
-        <input 
-          type="text" 
-          aria-label="Enter idea title"
-          placeholder="Title" 
-          class="title-input form-elements"
-        >
-        <textarea 
-          type="text" 
-          aria-label="Enter information about idea"
-          placeholder="Body" 
-          class="body-input form-elements"
-        >
-        </textarea>
-        <button class="save-button form-elements" disabled>save</button>
-      </form>
-  </header>
-  <main>
-    <input 
-      type="search" 
-      aria-label="Search ideas"
-      placeholder="Search" 
-      class="search-input form-elements"
-    >
-  </main>
-  <section class="populated-ideas-container"></section>
+    <header>
+      <h1>idea<span>box</span></h1>
+        <form>
+          <input
+            type="text" 
+            aria-label="Enter idea title"
+            placeholder="Title"
+            class="title-input form-elements"
+          >
+          <textarea
+            type="text" 
+            aria-label="Enter information about idea"
+            placeholder="Body"
+            class="body-input form-elements"
+          ></textarea>
+          <button class="save-button form-elements" disabled>save</button>
+        </form>
+    </header>
+    <main>
+      <input 
+        type="search"
+        aria-label="Search ideas"
+        placeholder="Search"
+        class="search-input form-elements"
+      >
+    </main>
+    <section class="populated-ideas-container"></section>
   </body>
   <script src="script.js" type="text/javascript"></script>
 </html>
